# sbm-ingester

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  lefthook.yml  pyproject.toml
.github/workflows/: main.yml
data/: demand_point_ids.csv  demand_point_ids_racv.csv  demand_points.csv  demand_points_racv.csv
docs/: ARCHITECTURE.md  CLEANUP_OFFCADENCE_ROWS.md  LEFTHOOK.md  bunnings-optima-site-id.csv  glue-optimization-plan.md  nem12_mappings.json  nem12_mappings_latest.json  racv-optima-site-id.csv  refactor-plan.md
docs/plans/: 2026-02-03-data-gap-detector-design.md  2026-02-03-data-gap-detector-implementation.md  2026-02-23-billing-csv-import-design.md  2026-02-23-billing-csv-import.md  2026-02-23-billing-neptune-hudi-design.md  2026-02-23-billing-points-import-design.md  2026-04-01-noosa-solar-parser-design.md  2026-04-14-bunnings-billing-parser-design.md
docs/superpowers/plans/: 2026-04-13-optima-interval-exporter-nem12-migration.md  2026-04-14-bunnings-billing-parser.md  2026-04-14-optima-nem12-exporter-rename.md  2026-04-16-neptune-pm-reassignment-migration.md  2026-04-30-nem12-timezone-fix.md  2026-04-30-sbm-ingester-timezone-pipeline-fix.md  2026-05-05-non-nem-parsers-modularization.md  2026-05-05-optima-demand-exporter.md  2026-05-05-optima-demand-profile-parser.md  2026-05-06-optima-interval-exporter.md  2026-05-06-parser-outcome-gap-analysis.md  2026-05-06-parser-outcome-semantics.md  2026-05-07-per-file-ingest-refactor.md  2026-05-12-post-deploy-tuning.md  2026-05-12-task-0-decision.md
docs/superpowers/specs/: 2026-04-13-optima-interval-exporter-nem12-migration-design.md  2026-04-14-optima-nem12-exporter-rename-design.md  2026-05-05-non-nem-parsers-modularization-design.md  2026-05-05-optima-demand-exporter-design.md  2026-05-05-optima-demand-profile-parser-design.md  2026-05-06-optima-interval-exporter-design.md  2026-05-06-parser-outcome-semantics-design.md  2026-05-07-per-file-ingest-refactor-design.md  2026-05-12-post-deploy-tuning-design.md
iac/: locals.tf  main.tf  nem12_mappings.tf  outputs.tf  sbm-ingester.tf  variables.tf  versions.tf
ingester/src/: gemsDataParseAndWrite.py
ingester/src/modules/: common.py  nem_adapter.py  nonNemParserFuncs.py
ingester/tests/: __init__.py  conftest.py  test_batch_s3_writes.py  test_common.py  test_edge_cases.py  test_integration.py  test_nem_adapter.py  test_nem_adapter_edge_cases.py  test_nonNemParserFuncs.py  test_nonNemParsers_edge_cases.py
nem12_mappings_to_s3/src/: nem12_mappings_to_s3.py
scripts/: backfill_country_to_dynamodb.py  billing_neptune_helper.py  check_cicd_policy_drift.sh  deploy-cim-exporter.sh  deploy-lambda.sh  deploy.sh  export_billing_to_hudi.py  fetch_billing_point_ids.py  generate_billing_points_csv.py  generate_demand_points.py  glue_delete_offcadence_rows.py  glue_delete_offcadence_rows.sh  import_billing_csv.py  import_billing_points.py  import_demand_points.py  import_optima_config_to_dynamodb.py  migrate_archives_to_weekly.py  process_nem12_locally.py  run_billing_snapshot_locally.py  setup-lefthook.sh
scripts/cleanup_configs/: bunnings.conf  racv.conf
src/: __init__.py
src/functions/billing_snapshot/: app.py  athena.py  config.py  pivot.py
src/functions/cim_exporter/: Dockerfile  __init__.py  requirements.txt
src/functions/data_gap_detector/: __init__.py  app.py  detector.py  mappings.py  query.py  report.py
src/functions/file_processor/: app.py  csv_writer.py  persistence.py  pipeline.py
src/functions/glue_trigger/: app.py
src/functions/nem12_exporter/: app.py
src/functions/optima_exporter/: README.md  app.py
src/functions/redrive_handler/: app.py
src/functions/weekly_archiver/: app.py
src/glue/hudi_import/: script.py
src/libs/: __init__.py
src/libs/nemreader/: __init__.py  nem_reader.py  split_days.py  streaming.py
src/shared/: __init__.py  audit.py  billing_parser.py  common.py  nem_adapter.py  non_nem_parsers.py  noosa_solar_parser.py  source_file.py
src/shared/db/: __init__.py  engine.py
src/shared/parsers/: __init__.py  _coerce.py  _mappings.py  dispatcher.py  outcome.py
terraform/: aurora.tf  billing_snapshot.tf  cim_exporter.tf  glue.tf  ingester.tf  locals.tf  logs.tf  monitoring.tf  nem12_mappings.tf  optima_exporter.tf  outputs.tf  providers.tf  variables.tf  weekly_archiver.tf
tests/: _outcome_invariants.py  conftest.py
tests/helpers/: outcome_invariants.py
tests/unit/: conftest.py  test_audit.py  test_audit_sidecar_contract.py  test_batch_s3_writes.py  test_billing_parser.py  test_common.py  test_csv_writer.py  test_dataframe_partial_skip.py  test_dispatcher.py  test_edge_cases.py  test_file_stability.py  test_glue_hudi_import.py  test_glue_trigger.py  test_idempotency_boundary.py  test_import_billing_csv.py  test_import_optima_config_to_dynamodb.py  test_integration.py  test_lambda_handler.py  test_migrate_archives.py  test_nem12_real_file_equivalence.py  test_nem12_streaming.py  test_nem_adapter.py  test_nem_adapter_edge_cases.py  test_nem_envelope_only.py  test_nem_envelope_short_circuit.py  test_non_nem_parsers.py  test_non_nem_parsers_edge_cases.py  test_noosa_solar_parser.py  test_optima_exporter.py  test_outcome_derive_final.py  test_persistence_cache_hit_log.py  test_pipeline.py  test_pipeline_metrics.py  test_process_nem12_locally.py  test_source_file.py  test_unmapped_disposition.py  test_weekly_archiver.py
tests/unit/billing_snapshot/: conftest.py  test_app.py  test_athena.py  test_config.py  test_pivot.py
tests/unit/data_gap_detector/: __init__.py  test_app.py  test_detector.py  test_mappings.py  test_query.py  test_report.py
tests/unit/fixtures/: bunnings_billing_sample.csv  nem12_15min_interval.csv  nem12_5min_interval.csv  nem12_blank_lines.csv  nem12_missing_values.csv  nem12_multiday.csv  nem12_multiple_900.csv  nem12_no_900.csv  nem12_with_400_events.csv  nem13_empty.csv  optima_bidenergy_nem12_bom.csv  optima_bidenergy_nem12_crlf.csv  optima_bidenergy_nem12_sample.csv
tests/unit/optima_exporter/: __init__.py  conftest.py  test_e2e_full_chain.py
tests/unit/parsers/: test_coerce.py  test_outcome.py  (+2 more)
(+92 files in other folders)
